@@ -17,117 +17,25 @@
 #Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 //Set the module name -- should be the name of the class
-define("MODULE_NAME", "News");
+$module_name = "News";
+
+//Load functions
+require_once(dirname(__FILE__)."/modulefunctions.php");
 
 //Register Module
-cms_mapi_register_module(MODULE_NAME);
+cms_mapi_register_module($module_name, "Ted Kulp <tedkulp@users.sf.net>", "1.0");
 
-//Define module variables
-$cmsmodules[MODULE_NAME]['Author'] = "Ted Kulp <tedkulp@users.sf.net>";
-$cmsmodules[MODULE_NAME]['Version'] = "1.0";
-$cmsmodules[MODULE_NAME]['ContentModule'] = "1";
-$cmsmodules[MODULE_NAME]['PluginModule'] = "1";
+//Register module to work as a content type
+cms_mapi_register_content_module($module_name);
 
-function news_module_install($cms) {
-	//This function should install the database functions and do other basic init stuff for first time use.
-	$db = $cms->db;
-	$dict = NewDataDictionary($db);
-	$flds = "
-		news_id I KEY,
-		news_title C(255),
-		news_data X,
-		news_date T,
-		create_date T,
-		modified_date T
-	";
-	$taboptarray = array('mysql' => 'TYPE=MyISAM');
-	$sqlarray = $dict->CreateTableSQL(cms_db_prefix()."module_news", $flds, $taboptarray);
-	$dict->ExecuteSQLArray($sqlarray);
+//Register module to work as a plugin (cms_module)
+cms_mapi_register_plugin_module($module_name);
 
-	$db->CreateSequence(cms_db_prefix()."module_news_seq");
-
-	cms_mapi_create_permission($cms, 'Modify News', 'Modify News');
-
-	#Throw in a test for now
-	$new_id = $db->GenID(cms_db_prefix()."module_news_seq");
-	$query = "INSERT INTO ".cms_db_prefix()."module_news (news_id, news_title, news_data, news_date, create_date, modified_date) VALUES ($new_id, 'News Module Installed', 'The news module was installed.  Exciting.', ".$db->DBTimeStamp(time()).", ".$db->DBTimeStamp(time()).", ".$db->DBTimeStamp(time()).")";
-	$result = $db->Execute($query);
-}
-
-cms_mapi_register_install_function(MODULE_NAME, 'news_module_install');
-
-function news_module_uninstall($cms) {
-	//This function should uninstall database tables and generally cleanup.
-	$db = $cms->db;
-	$dict = NewDataDictionary($db);
-	$sqlarray = $dict->DropTableSQL(cms_db_prefix()."module_news");
-	$dict->ExecuteSQLArray($sqlarray);
-
-	$db->DropSequence(cms_db_prefix()."module_news_seq");
-
-	cms_mapi_remove_permission($cms, 'Modify News');
-}
-
-cms_mapi_register_uninstall_function(MODULE_NAME, 'news_module_uninstall');
-
-function news_module_execute($cms, $id, $params) {
-	//This is the entryway into the module.  All requests from CMS will come through here.
-	$db = $cms->db;
-	$query = "SELECT news_id, news_title, news_data, news_date FROM ".cms_db_prefix()."module_news ORDER BY news_date desc";
-	if (isset($params["number"])) {
-		$dbresult = $db->SelectLimit($query, $params["number"]);
-	} else {
-		$dbresult = $db->Execute($query);
-	}
-	if ($dbresult && $dbresult->RowCount()) {
-		while ($row = $dbresult->FetchRow()) {
-			echo "<div class=\"module_news\">";
-			echo date("F j, Y, g:i a", $db->UnixTimeStamp($row['news_date']))."<br />";
-			echo $row["news_title"]."<br />";
-			echo $row["news_data"];
-			echo "</div>";
-		}
-	}
-}
-
-cms_mapi_register_execute_function(MODULE_NAME, 'news_module_execute');
-
-function news_module_executeadmin($cms,$id) {
-
-	if (isset($_POST[$id."action"]) || isset($_GET[$id."action"])) {
-		$moduleaction = $_POST[$id."action"] . $_GET[$id."action"];
-		include_once(dirname(__FILE__)."/adminform.php");
-	} else {
-		$db = $cms->db;
-		$query = "SELECT news_id, news_title, news_data, news_date FROM ".cms_db_prefix()."module_news ORDER BY news_date desc";
-		$dbresult = $db->Execute($query);
-		if ($dbresult && $dbresult->RowCount()) {
-			echo "<table cellspacing=\"0\" class=\"admintable\">\n";
-			echo "<tr>\n";
-			echo "<td>Title</td>\n";
-			echo "<td width=\"20%\">Posting Date</td>\n";
-			echo "<td width=\"10%\">&nbsp;</td>\n";
-			echo "<td width=\"10%\">&nbsp;</td>\n";
-			echo "</tr>\n";
-			$rowclass="row1";
-			while ($row = $dbresult->FetchRow()) {
-				echo "<tr class=\"$rowclass\">\n";
-				echo "<td>".$row["news_title"]."</td>\n";
-				echo "<td>".$row["news_date"]."</td>\n";
-				echo "<td>".cms_mapi_create_admin_link("News",$id,array("action"=>"edit","news_id"=>$row["news_id"]),"Edit")."</td>\n";
-				echo "<td>".cms_mapi_create_admin_link("News",$id,array("action"=>"delete","news_id"=>$row["news_id"]),"Delete", "Are you sure you want to delete?")."</td>\n";
-				echo "</tr>\n";
-				($rowclass=="row1"?$rowclass="row2":$rowclass="row1");
-			}
-			echo "</table>\n";
-			echo "<div class=\"button\">".cms_mapi_create_admin_link("News",$id,array("action"=>"add"),"Add News Item")."</div>";
-		}
-	}
-}
-
-cms_mapi_register_executeadmin_function(MODULE_NAME, 'news_module_executeadmin');
-
-#$cmsmodules[MODULE_NAME]['Instance'] = new News;
+//Register callback functions
+cms_mapi_register_install_function($module_name, 'news_module_install');
+cms_mapi_register_uninstall_function($module_name, 'news_module_uninstall');
+cms_mapi_register_execute_function($module_name, 'news_module_execute');
+cms_mapi_register_executeadmin_function($module_name, 'news_module_executeadmin');
 
 # vim:ts=4 sw=4 noet
 ?>
